# pangeo-forge-cmr

./: .gitignore  README.md  pyproject.toml  setup.cfg
pangeo_forge_cmr/: __init__.py  _version.py
