[metadata]
name = pangeo-forge-cmr
description = Pipeline tools for building and publishing analysis ready datasets.
long_description = file:README.md
long_description_content_type = text/markdown
maintainer = Yuvi Panda, Brianna Pagán
maintainer_email = yuvipanda@gmail.com, briannapagan@gmail.com
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

url = https://github.com/yuvipanda/pangeo-forge-cmr
license = Apache
keywords = pangeo, data

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
install_requires =
    python-cmr
    pangeo-forge-recipes

[flake8]
max-line-length = 100